--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,9 @@
 	<packaging>jar</packaging>
 	<version>1.0.0</version>
 	<name>ldtcmd</name>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<repositories>
 		<repository>
 			<id>enonic</id>
@@ -21,7 +24,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.5.2</version>
+			<version>4.5.3</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.rjeschke</groupId>
